--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "install": "^0.13.0",
     "next": "10.0.9",
+    "npm": "^7.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
